--- a/app.env
+++ b/app.env
@@ -1,8 +1,8 @@
-POSTGRES_HOST=127.0.0.1
-POSTGRES_PORT=6500
-POSTGRES_USER=admin
-POSTGRES_PASSWORD=password123
-POSTGRES_DB=golang_fiber_jwt
+POSTGRES_HOST=dpg-ckf9u5mafg7c73961c1g-a
+POSTGRES_PORT=5432
+POSTGRES_USER=vinit
+POSTGRES_PASSWORD=dixA0xxNprIRHMlov08fK4pUzEiaq4Cq
+POSTGRES_DB=tiny_site
 
 DATABASE_URL=postgresql://admin:password123@localhost:6500/golang_fiber?schema=public
 
