--- a/app.env
+++ b/app.env
@@ -6,7 +6,11 @@ POSTGRES_DB=tiny_site
 
 CLIENT_ORIGIN=http://localhost:3000
 
-TEST_DB_URL="postgresql://admin:password123@localhost:6500/tiny_site?sslmode=disable"
+TEST_POSTGRES_HOST=127.0.0.1
+TEST_POSTGRES_PORT=6500
+TEST_POSTGRES_USER=admin
+TEST_POSTGRES_PASSWORD=password123
+TEST_POSTGRES_DB=postgres
 
 
 DOMAIN="localhost"
